--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,14 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+APP_USER="admin"
+APP_PSW="pedroPass"
+APP_IP="172.22.25.4"
+APP_PORT="22"
+NOCAPTCHA_SECRET=Por-aquí-clave-secreta
+NOCAPTCHA_SITEKEY=Pon-aqui-clave-de-sitio-web
+
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
